--- a/aw1/style1.css
+++ b/aw1/style1.css
@@ -234,6 +234,7 @@ nav.show div.icon-close {
 }
 
 /* ============ CONTEÚDOS =============*/
+/*sobre mim*/
 .conteudo {
   text-align: center;
 }
@@ -246,8 +247,8 @@ nav.show div.icon-close {
   object-fit: cover;
 }
 
+/*fotos à esquerda*/
 .conteudo1 {
-  /*só pra diferenciar os paragrafos*/
   padding: 1rem 1rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-bottom: 0.25rem solid blue;
@@ -265,8 +266,8 @@ nav.show div.icon-close {
   text-align: justify;
 }
 
+/*fotos à direita*/
 .conteudo2 {
-  /*só pra diferenciar os paragrafos*/
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-bottom: 0.25rem solid red;
   text-align: center;
@@ -295,16 +296,5 @@ nav.show div.icon-close {
 }
 
 .swiper-pagination-bullet-active {
-  background: var(--base-color);
-}
-
-#historia .container {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-#historia .title {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-  margin-bottom: 0;
+  background: black;
 }
