--- a/aw1/style1.css
+++ b/aw1/style1.css
@@ -53,6 +53,7 @@ body {
   height: 1.5px;
   background: linear-gradient(270deg, #ccf4e657, #22038f);
 }
+
 /* ============ LAYOUT =============*/
 .container {
   margin-left: 1.5rem;
@@ -175,7 +176,7 @@ nav.show .menu ul {
 }
 
 nav.show ul.grid {
-  gap: 4rem;
+  gap: 2rem;
 }
 
 /*toggle menu*/
@@ -184,6 +185,7 @@ nav.show ul.grid {
   font-size: 2rem;
   cursor: pointer;
 }
+
 nav .icon-close {
   visibility: hidden;
   opacity: 0;
@@ -221,26 +223,21 @@ nav.show div.icon-close {
 }
 
 .card img {
-  width: 14.625rem;
+  width: 10rem;
 }
 
 .card .title {
   font-family: 'Boogaloo', cursive;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .card p {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 
 /* ============ CONTEÚDOS =============*/
-/*sobre mim*/
-.conteudo {
-  text-align: center;
-}
-
 .conteudo img {
-  width: 14rem;
+  width: 12rem;
   clip-path: circle();
   float: right;
   margin-left: 0.5rem;
@@ -297,4 +294,87 @@ nav.show div.icon-close {
 
 .swiper-pagination-bullet-active {
   background: black;
+}
+
+/* ============ FORMULÁRIO =============*/
+.form {
+  display: block;
+  padding: 1.25rem;
+  background-color: #fff;
+  box-shadow: 0 1.25rem 0.32rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.32rem;
+}
+
+.form .row {
+  display: block;
+  padding: 0.7rem;
+}
+
+.form .flx {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form .flx .input {
+  flex: 1;
+}
+
+.form .flx .input:first-child {
+  margin-right: 1.25rem;
+}
+
+.form .input {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #cccccc;
+  border-radius: 0.32rem;
+  font-size: 1rem;
+  color: #333333;
+}
+
+.form .input:focus {
+  outline-color: #2196f3;
+}
+
+.form .textarea {
+  display: block;
+  width: 100%;
+  height: 10rem;
+  padding: 0.5rem;
+  border: 1px solid #cccccc;
+  font-size: 1rem;
+  border-radius: 0.32rem;
+  resize: none;
+}
+
+.form .textarea:focus {
+  outline-color: #2196f3;
+}
+
+.form .btn {
+  display: block;
+  padding: 0.5rem;
+  background-color: #3f51b5;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 400;
+  border: 1px solid #cccccc;
+  border-radius: 0.32rem;
+  transition: 0.3s;
+}
+
+.form .btn:hover {
+  background: #283593;
+}
+
+/* ============ FOOTER =============*/
+footer {
+  background-color: black;
+}
+
+footer p {
+  color: white;
+  font-family: 'ABeeZee', sans-serif;
 }
